Improved clean target: now cleans regression test results and unit test results.

--- a/idldoc/Makefile
+++ b/idldoc/Makefile
@@ -4,8 +4,8 @@ REVISION=-r`svn info | sed -n 's/Revision: \(.*\)/\1/p'`
 clean:
 	rm -f *.zip
 	rm -rf api-docs
-	# remove regression test results
-	# remove unit_test test results
+	rm -rf regression_test/*-docs
+	rm -rf unit_tests/*-docs
 	
 doc:
 	idl build_idldoc_docs
