Made 'build dist' not include anything run in my normal startup file.

--- a/idldoc/Makefile
+++ b/idldoc/Makefile
@@ -22,7 +22,7 @@ dist:
 	
 	mkdir idldoc-$(VERSION)
 	
-	idl build_idldoc
+	idl -IDL_STARTUP "" build_idldoc
 	mv idldoc.sav idldoc-$(VERSION)/
 	
 	svn export docs idldoc-$(VERSION)/docs/
