Renamed plugin to match conventions. Added some references in the docs directory to get new users started.

--- a/idldoc/Makefile
+++ b/idldoc/Makefile
@@ -65,16 +65,16 @@ updates:
 
 	idl -IDL_STARTUP "" build_idldoc
 
-	mkdir updates.idldev.com/plugins/com.idldev.idl.idldoc.feature_$(VERSION)/
-	cp idldoc.sav updates.idldev.com/plugins/com.idldev.idl.idldoc.feature_$(VERSION)/
+	mkdir updates.idldev.com/plugins/com.idldev.idl.idldoc_$(VERSION)/
+	cp idldoc.sav updates.idldev.com/plugins/com.idldev.idl.idldoc_$(VERSION)/
 	rm idldoc.sav
 
-	svn export docs updates.idldev.com/plugins/com.idldev.idl.idldoc.feature_$(VERSION)/docs/
+	svn export docs updates.idldev.com/plugins/com.idldev.idl.idldoc_$(VERSION)/docs/
 
-	svn export src/templates updates.idldev.com/plugins/com.idldev.idl.idldoc.feature_$(VERSION)/templates/
-	svn export src/resources updates.idldev.com/plugins/com.idldev.idl.idldoc.feature_$(VERSION)/resources/
+	svn export src/templates updates.idldev.com/plugins/com.idldev.idl.idldoc_$(VERSION)/templates/
+	svn export src/resources updates.idldev.com/plugins/com.idldev.idl.idldoc_$(VERSION)/resources/
 
-	jar cvf updates.idldev.com/plugins/com.idldev.idl.idldoc.feature_$(VERSION).jar -C updates.idldev.com/plugins/com.idldev.idl.idldoc.feature_$(VERSION) .
-	rm -rf updates.idldev.com/plugins/com.idldev.idl.idldoc.feature_$(VERSION)/
+	jar cvf updates.idldev.com/plugins/com.idldev.idl.idldoc_$(VERSION).jar -C updates.idldev.com/plugins/com.idldev.idl.idldoc_$(VERSION) .
+	rm -rf updates.idldev.com/plugins/com.idldev.idl.idldoc_$(VERSION)/
 
 	scp -r updates.idldev.com/* tizer.dreamhost.com:~/updates.idldev.com
